Upped the toolchain and added lots of compatibility fixes. Also, added option to enable symbol visibility for shared libs via "ENABLE_VISIBILITY=1".

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,24 @@ matrix:
   include:
     - os: osx
       compiler: clang
-      env: IOS_PLATFORM=SIMULATOR
+      env: 
+        - IOS_PLATFORM=SIMULATOR
+        - BUILD_SHARED=0
     - os: osx
       compiler: clang
-      env: IOS_PLATFORM=SIMULATOR64
+      env: 
+        - IOS_PLATFORM=SIMULATOR64
+        - BUILD_SHARED=0
     - os: osx
       compiler: clang
-      env: IOS_PLATFORM=OS
+      env: 
+        - IOS_PLATFORM=OS
+        - BUILD_SHARED=0
+    - os: osx
+      compiler: clang
+      env: 
+        - IOS_PLATFORM=OS
+        - BUILD_SHARED=1
 
 install: true
 
