--- a/example/example-lib/CMakeLists.txt
+++ b/example/example-lib/CMakeLists.txt
@@ -16,18 +16,25 @@ set (HEADERS
   HelloWorldIOS.h
 )
 
-
-IF (${SIMULATOR})
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mios-simulator-version-min=8.0")
-ENDIF()
-
 # Library
-add_library (example STATIC ${SOURCES} ${HEADERS})
+if (BUILD_SHARED)
+  add_library (example SHARED ${SOURCES} ${HEADERS})
+  message(STATUS "Building shared version...")
+else()
+  add_library (example STATIC ${SOURCES} ${HEADERS})
+  message(STATUS "Building static version...")
+endif()
+
+# Executable
+add_executable (helloworld main.cpp)
+
+# Link the library with the executable
+target_link_libraries(helloworld example)
 
 # Debug symbols set in XCode project
 set_xcode_property (example GCC_GENERATE_DEBUGGING_SYMBOLS YES "All")
 
 # Installation
 set (CMAKE_INSTALL_PREFIX "${example-ios_SOURCE_DIR}/../example-app/example-lib")
-install (TARGETS example DESTINATION lib)
+install (TARGETS example helloworld DESTINATION lib)
 install (FILES ${HEADERS} DESTINATION include)
