--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,11 @@ matrix:
     - os: osx
       compiler: clang
       env: 
+        - IOS_PLATFORM=OS64
+        - BUILD_SHARED=0
+    - os: osx
+      compiler: clang
+      env: 
         - IOS_PLATFORM=OS
         - BUILD_SHARED=1
 
