--- a/.travis.yml
+++ b/.travis.yml
@@ -8,26 +8,49 @@ matrix:
       env: 
         - IOS_PLATFORM=SIMULATOR
         - BUILD_SHARED=0
+        - USE_XCODE=0
     - os: osx
       compiler: clang
       env: 
         - IOS_PLATFORM=SIMULATOR64
         - BUILD_SHARED=0
+        - USE_XCODE=0
     - os: osx
       compiler: clang
       env: 
         - IOS_PLATFORM=OS
         - BUILD_SHARED=0
+        - USE_XCODE=0
     - os: osx
       compiler: clang
       env: 
         - IOS_PLATFORM=OS64
         - BUILD_SHARED=0
+        - USE_XCODE=0
     - os: osx
       compiler: clang
       env: 
         - IOS_PLATFORM=OS
         - BUILD_SHARED=1
+        - USE_XCODE=0
+    - os: osx
+      compiler: clang
+      env:
+        - IOS_PLATFORM=TVOS
+        - BUILD_SHARED=0
+        - USE_XCODE=0
+    - os: osx
+      compiler: clang
+      env:
+        - IOS_PLATFORM=WATCHOS
+        - BUILD_SHARED=0
+        - USE_XCODE=0
+    - os: osx
+      compiler: clang
+      env:
+        - IOS_PLATFORM=OS64COMBINED
+        - BUILD_SHARED=0
+        - USE_XCODE=1
 
 install: true
 
