--- a/.travis.yml
+++ b/.travis.yml
@@ -1,66 +1,50 @@
 language: objective-c
 
-env:
-  matrix:
-    - PLATFORM=OS
-
 matrix:
   include:
   - os: osx
     osx_image: xcode10.2
-    compiler: clang
     env:
       - PLATFORM=SIMULATOR
   - os: osx
     osx_image: xcode10.2
-    compiler: clang
     env:
       - PLATFORM=SIMULATOR64
   - os: osx
     osx_image: xcode10.2
-    compiler: clang
     env:
       - PLATFORM=OS
   - os: osx
     osx_image: xcode10.2
-    compiler: clang
     env:
       - PLATFORM=OS64
   - os: osx
     osx_image: xcode10.2
-    compiler: clang
     env:
-      - PLATFORM=OS
-      - BUILD_SHARED=1
+      - PLATFORM=OS BUILD_SHARED=1
   - os: osx
     osx_image: xcode10.2
-    compiler: clang
     env:
       - PLATFORM=TVOS
   - os: osx
     osx_image: xcode10.2
-    compiler: clang
     env:
       - PLATFORM=WATCHOS
   - os: osx
     osx_image: xcode10.2
-    compiler: clang
     env:
-      - PLATFORM=OS64COMBINED
-      - USE_XCODE=1
+      - PLATFORM=OS64COMBINED USE_XCODE=1
+  - os: osx
+    osx_image: xcode10.2
+    env:
+      - PLATFORM=OS USE_STRICT_COMPILER_CHECKS=1
+  - os: osx
+    osx_image: xcode10.2
+    env:
+      - PLATFORM=OS BUILD_LIBRESSL=1
   allow_failures:
-  - os: osx
-    osx_image: xcode10.2
-    compiler: clang
-    env:
-      - PLATFORM=OS
-      - USE_STRICT_COMPILER_CHECKS=1
-  - os: osx
-    osx_image: xcode10.2
-    compiler: clang
-    env:
-      - PLATFORM=OS
-      - BUILD_LIBRESSL=1
+    - env: PLATFORM=OS BUILD_LIBRESSL=1
+    - env: PLATFORM=OS USE_STRICT_COMPILER_CHECKS=1
 
 install: true
 
