Added more coverage over different cmake versions as well as updated to the latest xcode versions available on travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: objective-c
 matrix:
   include:
   - os: osx
-    osx_image: xcode10.2
+    osx_image: xcode11.3
     env:
       - PLATFORM=SIMULATOR
   - os: osx
@@ -11,11 +11,19 @@ matrix:
     env:
       - PLATFORM=SIMULATOR64
   - os: osx
-    osx_image: xcode10.2
+    osx_image: xcode11.1
     env:
       - PLATFORM=OS
   - os: osx
     osx_image: xcode10.2
+    env:
+      - PLATFORM=OS64
+  - os: osx
+    osx_image: xcode9.4
+    env:
+      - PLATFORM=OS64
+  - os: osx
+    osx_image: xcode8.3
     env:
       - PLATFORM=OS64
   - os: osx
@@ -35,7 +43,7 @@ matrix:
     env:
       - PLATFORM=OS64COMBINED USE_XCODE=1
   - os: osx
-    osx_image: xcode10.2
+    osx_image: xcode11.3
     env:
       - PLATFORM=OS64COMBINED BUILD_CURL=1 USE_XCODE=1
 
