--- a/example/example-lib/CMakeLists.txt
+++ b/example/example-lib/CMakeLists.txt
@@ -13,11 +13,33 @@ else()
   message(STATUS "kqueue found!")
 endif()
 
-find_library(HAVE_UIKIT UIKit)
-if (NOT HAVE_UIKIT)
-  message(FATAL_ERROR "UIKit.framework NOT found!")
+if(PLATFORM MATCHES "(MAC|MAC_ARM64)")
+  find_library(HAVE_APPKIT AppKit)
+  if (NOT HAVE_APPKIT)
+    message(FATAL_ERROR "AppKit.framework NOT found!")
+  else()
+    message(STATUS "AppKit.framework found!")
+  endif()
+elseif(PLATFORM MATCHES "(MAC_CATALYST|MAC_CATALYST_ARM64)")
+  find_library(HAVE_APPKIT AppKit)
+  if (NOT HAVE_APPKIT)
+    message(FATAL_ERROR "AppKit.framework NOT found!")
+  else()
+    message(STATUS "AppKit.framework found!")
+  endif()
+  find_library(HAVE_UIKIT UIKit)
+  if (NOT HAVE_UIKIT)
+    message(FATAL_ERROR "UIKit.framework NOT found!")
+  else()
+    message(STATUS "UIKit.framework found!")
+  endif()
 else()
-  message(STATUS "UIKit.framework found!")
+  find_library(HAVE_UIKIT UIKit)
+  if (NOT HAVE_UIKIT)
+    message(FATAL_ERROR "UIKit.framework NOT found!")
+  else()
+    message(STATUS "UIKit.framework found!")
+  endif()
 endif()
 
 # Hook up XCTest for the supported plaforms (all but WatchOS)
@@ -61,10 +83,11 @@ if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
 endif(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
 
 # Executable
-#add_executable (helloworld main.cpp)
-
-# Link the library with the executable
-#target_link_libraries(helloworld example)
+if(PLATFORM MATCHES "MAC.*")
+  add_executable (helloworld main.cpp)
+  # Link the library with the executable
+  target_link_libraries(helloworld example)
+endif()
 
 # Debug symbols set in XCode project
 set_xcode_property(example GCC_GENERATE_DEBUGGING_SYMBOLS YES "All")
