--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,7 @@ matrix:
   - os: osx
     osx_image: xcode8.3
     env:
-      - PLATFORM=OS64
-      - DEPLOYMENT_TARGET=10.0
+      - PLATFORM=OS64 DEPLOYMENT_TARGET=10.0
   - os: osx
     osx_image: xcode10.2
     env:
