--- a/.travis.yml
+++ b/.travis.yml
@@ -5,51 +5,47 @@ matrix:
   - os: osx
     osx_image: xcode11.3
     env:
-      - PLATFORM=SIMULATOR
+      - PLATFORM=SIMULATOR DEPLOYMENT_TARGET=13.1
   - os: osx
     osx_image: xcode10.2
     env:
-      - PLATFORM=SIMULATOR64
+      - PLATFORM=SIMULATOR64 DEPLOYMENT_TARGET=12.1
   - os: osx
     osx_image: xcode11.1
     env:
-      - PLATFORM=OS
+      - PLATFORM=OS DEPLOYMENT_TARGET=13.0
   - os: osx
     osx_image: xcode10.2
     env:
-      - PLATFORM=OS64
+      - PLATFORM=OS64 DEPLOYMENT_TARGET=12.0
   - os: osx
     osx_image: xcode9.4
     env:
-      - PLATFORM=OS64
-  - os: osx
-    osx_image: xcode8.3
-    env:
-      - PLATFORM=OS64 DEPLOYMENT_TARGET=10.0
+      - PLATFORM=OS64 DEPLOYMENT_TARGET=11.0
   - os: osx
     osx_image: xcode10.2
     env:
-      - PLATFORM=OS BUILD_SHARED=1
+      - PLATFORM=OS BUILD_SHARED=1 DEPLOYMENT_TARGET=12.0
   - os: osx
     osx_image: xcode10.2
     env:
-      - PLATFORM=TVOS
+      - PLATFORM=TVOS DEPLOYMENT_TARGET=11.0
   - os: osx
     osx_image: xcode10.2
     env:
-      - PLATFORM=WATCHOS
+      - PLATFORM=WATCHOS DEPLOYMENT_TARGET=5.0
   - os: osx
     osx_image: xcode10.2
     env:
-      - PLATFORM=OS64COMBINED USE_XCODE=1
+      - PLATFORM=OS64COMBINED USE_XCODE=1 DEPLOYMENT_TARGET=11.0
   - os: osx
     osx_image: xcode12.2
     env:
-      - PLATFORM=OS64COMBINED USE_XCODE=1
+      - PLATFORM=OS64COMBINED USE_XCODE=1 DEPLOYMENT_TARGET=14.0
   - os: osx
     osx_image: xcode11.3
     env:
-      - PLATFORM=OS64COMBINED BUILD_CURL=1 USE_XCODE=1
+      - PLATFORM=OS64COMBINED BUILD_CURL=1 USE_XCODE=1 DEPLOYMENT_TARGET=11.0
 
 install: true
 
