--- a/.travis.yml
+++ b/.travis.yml
@@ -41,11 +41,20 @@ matrix:
   - os: osx
     osx_image: xcode12.2
     env:
-      - PLATFORM=OS64COMBINED USE_XCODE=1 DEPLOYMENT_TARGET=14.0
+      - PLATFORM=OS64 BUILD_SHARED=1 DEPLOYMENT_TARGET=12.0
+allow_failures:
+  - os: osx
+      osx_image: xcode12.2
+      env:
+        - PLATFORM=OS64COMBINED USE_XCODE=1 DEPLOYMENT_TARGET=14.0
   - os: osx
     osx_image: xcode11.3
     env:
       - PLATFORM=OS64COMBINED BUILD_CURL=1 USE_XCODE=1 DEPLOYMENT_TARGET=11.0
+  - os: osx
+    osx_image: xcode12.2
+    env:
+      - PLATFORM=MAC DEPLOYMENT_TARGET=10.14
 
 install: true
 
