--- a/example/example-lib/CMakeLists.txt
+++ b/example/example-lib/CMakeLists.txt
@@ -13,33 +13,18 @@ else()
   message(STATUS "kqueue found!")
 endif()
 
-if(PLATFORM MATCHES "(MAC|MAC_ARM64)")
-  find_library(HAVE_APPKIT AppKit)
-  if (NOT HAVE_APPKIT)
-    message(FATAL_ERROR "AppKit.framework NOT found!")
-  else()
-    message(STATUS "AppKit.framework found!")
-  endif()
-elseif(PLATFORM MATCHES "(MAC_CATALYST|MAC_CATALYST_ARM64)")
-  find_library(HAVE_APPKIT AppKit)
-  if (NOT HAVE_APPKIT)
-    message(FATAL_ERROR "AppKit.framework NOT found!")
-  else()
-    message(STATUS "AppKit.framework found!")
-  endif()
-  find_library(HAVE_UIKIT UIKit)
-  if (NOT HAVE_UIKIT)
-    message(FATAL_ERROR "UIKit.framework NOT found!")
-  else()
-    message(STATUS "UIKit.framework found!")
-  endif()
+find_library(HAVE_APPKIT AppKit)
+if (NOT HAVE_APPKIT)
+  message(STATUS "AppKit.framework NOT found!")
 else()
-  find_library(HAVE_UIKIT UIKit)
-  if (NOT HAVE_UIKIT)
-    message(FATAL_ERROR "UIKit.framework NOT found!")
-  else()
-    message(STATUS "UIKit.framework found!")
-  endif()
+  message(STATUS "AppKit.framework found!")
+endif()
+
+find_library(HAVE_UIKIT UIKit)
+if (NOT HAVE_UIKIT)
+  message(STATUS "UIKit.framework NOT found!")
+else()
+  message(STATUS "UIKit.framework found!")
 endif()
 
 # Hook up XCTest for the supported plaforms (all but WatchOS)
