Even more tweaking of travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ env:
   - PLATFORM=OS64COMBINED USE_XCODE=1 DEPLOYMENT_TARGET=11.0
   - PLATFORM=MAC DEPLOYMENT_TARGET=10.13
   - PLATFORM=OS64COMBINED USE_XCODE=1 DEPLOYMENT_TARGET=11.0 BUILD_CURL=1
+  - PLATFORM=OS64COMBINED USE_XCODE=1 DEPLOYMENT_TARGET=11.0 USE_NEW_BUILD=1
 
 jobs:
   fast_finish: true
@@ -60,9 +61,8 @@ jobs:
         - PLATFORM=OS64COMBINED USE_XCODE=1 DEPLOYMENT_TARGET=11.0 USE_NEW_BUILD=1
   allow_failures:
     - env:
-      - PLATFORM=OS64COMBINED USE_XCODE=1 DEPLOYMENT_TARGET=11.0 USE_NEW_BUILD=1 # Allows failures since new Xcode build system broke Cmake and requires CMake 3.19.4+
-      - PLATFORM=OS64COMBINED USE_XCODE=1 DEPLOYMENT_TARGET=11.0 BUILD_CURL=1 # Allows failures since new Xcode build system broke Cmake and requires CMake 3.19.4+
-
+      - PLATFORM=OS64COMBINED USE_XCODE=1 DEPLOYMENT_TARGET=11.0 BUILD_CURL=1
+      - PLATFORM=OS64COMBINED USE_XCODE=1 DEPLOYMENT_TARGET=11.0 USE_NEW_BUILD=1
 
 install: skip
 
