Lots of fixes. Cannot get the mac catalyst builds to work with the xcode generator, but works on all other tested generators.

--- a/example/example-lib/CMakeLists.txt
+++ b/example/example-lib/CMakeLists.txt
@@ -8,23 +8,23 @@ MESSAGE( STATUS "CMAKE_CXX_FLAGS: " ${CMAKE_CXX_FLAGS} )
 include(CheckCXXSymbolExists)
 check_cxx_symbol_exists(kqueue sys/event.h HAVE_KQUEUE)
 if(NOT HAVE_KQUEUE)
-  message(FATAL_ERROR "kqueue NOT found!")
+  message(STATUS "kqueue NOT found!")
 else()
   message(STATUS "kqueue found!")
 endif()
 
-find_library(HAVE_APPKIT AppKit)
-if (NOT HAVE_APPKIT)
+find_library(APPKIT_LIBRARY AppKit)
+if (NOT APPKIT_LIBRARY)
   message(STATUS "AppKit.framework NOT found!")
 else()
-  message(STATUS "AppKit.framework found!")
+  message(STATUS "AppKit.framework found! ${APPKIT_LIBRARY}")
 endif()
 
-find_library(HAVE_UIKIT UIKit)
-if (NOT HAVE_UIKIT)
+find_library(UIKIT_LIBRARY UIKit)
+if (NOT UIKIT_LIBRARY)
   message(STATUS "UIKit.framework NOT found!")
 else()
-  message(STATUS "UIKit.framework found!")
+  message(STATUS "UIKit.framework found! ${UIKIT_LIBRARY}")
 endif()
 
 # Hook up XCTest for the supported plaforms (all but WatchOS)
