Stringify deployment target since the "." is dropped when executing the yaml in Github actions

--- a/.github/workflows/tvos.yml
+++ b/.github/workflows/tvos.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: macos-latest
     env:
       PLATFORM: TVOS
-      DEPLOYMENT_TARGET: 11.0
+      DEPLOYMENT_TARGET: "11.0"
     steps:
     - uses: actions/checkout@v2
     - uses: maxim-lobanov/setup-xcode@v1
