--- a/.github/workflows/catalyst.yml
+++ b/.github/workflows/catalyst.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: macos-11
     env:
       PLATFORM: MAC_CATALYST
-      DEPLOYMENT_TARGET: 13.0
+      DEPLOYMENT_TARGET: "13.0"
     steps:
     - uses: actions/checkout@v2
     - uses: maxim-lobanov/setup-xcode@v1
@@ -25,7 +25,7 @@ jobs:
     runs-on: macos-11
     env:
       PLATFORM: MAC_CATALYST_ARM64
-      DEPLOYMENT_TARGET: 13.0
+      DEPLOYMENT_TARGET: "13.0"
     steps:
     - uses: actions/checkout@v2
     - uses: maxim-lobanov/setup-xcode@v1
