--- a/.github/workflows/combined.yml
+++ b/.github/workflows/combined.yml
@@ -13,7 +13,7 @@ jobs:
     env:
       PLATFORM: OS64COMBINED
       USE_NEW_BUILD: 1
-      DEPLOYMENT_TARGET: 12.0
+      DEPLOYMENT_TARGET: "12.0"
       USE_XCODE: 1
     steps:
     - uses: actions/checkout@v2
@@ -28,7 +28,7 @@ jobs:
     env:
       PLATFORM: WATCHOSCOMBINED
       USE_NEW_BUILD: 1
-      DEPLOYMENT_TARGET: 5.0
+      DEPLOYMENT_TARGET: "5.0"
       USE_XCODE: 1
     steps:
     - uses: actions/checkout@v2
@@ -43,7 +43,7 @@ jobs:
     env:
       PLATFORM: TVOSCOMBINED
       USE_NEW_BUILD: 1
-      DEPLOYMENT_TARGET: 11.0
+      DEPLOYMENT_TARGET: "11.0"
       USE_XCODE: 1
     steps:
     - uses: actions/checkout@v2
@@ -57,7 +57,7 @@ jobs:
     runs-on: macos-11
     env:
       PLATFORM: OS64COMBINED
-      DEPLOYMENT_TARGET: 14.0
+      DEPLOYMENT_TARGET: "14.0"
       USE_XCODE: 1
       BUILD_CURL: 1
     steps:
