--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -38,7 +38,7 @@ jobs:
     runs-on: macos-latest
     env:
       PLATFORM: OS64
-      DEPLOYMENT_TARGET: 11.0
+      DEPLOYMENT_TARGET: "11.0"
     steps:
     - uses: actions/checkout@v2
     - uses: maxim-lobanov/setup-xcode@v1
@@ -51,7 +51,7 @@ jobs:
     runs-on: macos-latest
     env:
       PLATFORM: OS64
-      DEPLOYMENT_TARGET: 12.0
+      DEPLOYMENT_TARGET: "12.0"
     steps:
     - uses: actions/checkout@v2
     - uses: maxim-lobanov/setup-xcode@v1
