--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: macos-latest
     env:
       PLATFORM: MAC
-      DEPLOYMENT_TARGET: 10.13
+      DEPLOYMENT_TARGET: "10.13"
     steps:
     - uses: actions/checkout@v2
     - uses: maxim-lobanov/setup-xcode@v1
@@ -20,12 +20,12 @@ jobs:
         xcode-version: '12.5.1'
     - name: Build
       run: ./.github/build.sh
-  build_with_13_1_MAC:
+  build_with_13_2_MAC:
     name: "Xcode version 13.2, Target macOS [arm64] Target SDK 11.0 [shared example]"
     runs-on: macos-11
     env:
       PLATFORM: MAC_ARM64
-      DEPLOYMENT_TARGET: 11.0
+      DEPLOYMENT_TARGET: "11.0"
       BUILD_SHARED: 1
     steps:
     - uses: actions/checkout@v2
