--- a/.github/workflows/watchos.yml
+++ b/.github/workflows/watchos.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: macos-latest
     env:
       PLATFORM: WATCHOS
-      DEPLOYMENT_TARGET: 5.0
+      DEPLOYMENT_TARGET: "5.0"
     steps:
     - uses: actions/checkout@v2
     - uses: maxim-lobanov/setup-xcode@v1
@@ -25,7 +25,7 @@ jobs:
     runs-on: macos-latest
     env:
       PLATFORM: SIMULATOR_WATCHOS
-      DEPLOYMENT_TARGET: 7.0
+      DEPLOYMENT_TARGET: "7.0"
     steps:
     - uses: actions/checkout@v2
     - uses: maxim-lobanov/setup-xcode@v1
