--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -33,6 +33,19 @@ jobs:
         xcode-version: '11.7.0'
     - name: Build
       run: ./.github/build.sh    
+  build_with_11_7_0_SIMULATORARM64:
+    name: "Xcode version 12.5.1, Target iOS Simulator [arm64] Target SDK 11.0"
+    runs-on: macos-latest
+    env:
+      PLATFORM: SIMULATORARM64
+      DEPLOYMENT_TARGET: 11.0
+    steps:
+    - uses: actions/checkout@v2
+    - uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: '12.5.1'
+    - name: Build
+      run: ./.github/build.sh    
   build_with_11_7_0_OS64:
     name: "Xcode version 11.7.0, Target iOS [arm64] Target SDK 11.0"
     runs-on: macos-latest
