example: avoid cmake_minimum deprecation warning
Apple Silicon in general requires CMake >= 3.19.2, so it's
unlikely to be an issue.

--- a/example/example-lib/CMakeLists.txt
+++ b/example/example-lib/CMakeLists.txt
@@ -1,9 +1,6 @@
-cmake_minimum_required (VERSION 3.2)
-project (example-ios)
+cmake_minimum_required (VERSION 3.5)
+project(example-ios LANGUAGES CXX OBJC)
 enable_testing()
-
-enable_language(CXX)
-enable_language(OBJC)
 
 MESSAGE( STATUS "CMAKE_CXX_FLAGS: " ${CMAKE_CXX_FLAGS} )
 MESSAGE( STATUS "CMAKE_OBJC_FLAGS: " ${CMAKE_OBJC_FLAGS} )
