--- a/.github/workflows/tvos.yml
+++ b/.github/workflows/tvos.yml
@@ -7,16 +7,16 @@ on:
     types: [ opened, synchronize ]
 
 jobs:
-  build_with_11_7_0_TVOS:
-    name: "Xcode version 11.7.0, Target tvOS [arm64] Target SDK 11.0"
-    runs-on: macos-11
+  build_with_15_0_TVOS:
+    name: "Xcode version 15.0, Target tvOS [arm64] Target SDK 14.0"
+    runs-on: macos-13
     env:
       PLATFORM: TVOS
-      DEPLOYMENT_TARGET: "11.0"
+      DEPLOYMENT_TARGET: "14.0"
     steps:
     - uses: actions/checkout@v2
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '11.7.0'
+        xcode-version: '15.0'
     - name: Build
       run: ./.github/build.sh
