--- a/.github/workflows/watchos.yml
+++ b/.github/workflows/watchos.yml
@@ -7,17 +7,17 @@ on:
     types: [ opened, synchronize ]
 
 jobs:
-  build_with_11_7_0_WATCHOS:
-    name: "Xcode version 11.7.0, Target tvOS [armv7k, arm64_32] Target SDK 5.0"
-    runs-on: macos-11
+  build_with_15_0_WATCHOS:
+    name: "Xcode version 15.0, Target tvOS [armv7k, arm64_32] Target SDK 7.0"
+    runs-on: macos-13
     env:
       PLATFORM: WATCHOS
-      DEPLOYMENT_TARGET: "5.0"
+      DEPLOYMENT_TARGET: "7.0"
     steps:
     - uses: actions/checkout@v2
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '11.7.0'
+        xcode-version: '15.0'
     - name: Build
       run: ./.github/build.sh
   build_with_12_5_1_SIMULATOR_WATCHOS:
