--- a/.github/workflows/catalyst.yml
+++ b/.github/workflows/catalyst.yml
@@ -7,29 +7,29 @@ on:
     types: [ opened, synchronize ]
 
 jobs:
-  build_with_13_1_MAC_CATALYST:
-    name: "Xcode version 13.1, Target macOS Catalyst on Intel CPUs [x86_64] Target SDK 13.1"
-    runs-on: macos-11
-    env:
-      PLATFORM: MAC_CATALYST
-      DEPLOYMENT_TARGET: "13.1"
-    steps:
-    - uses: actions/checkout@v2
-    - uses: maxim-lobanov/setup-xcode@v1
-      with:
-        xcode-version: '13.1'
-    - name: Build
-      run: ./.github/build.sh
-  build_with_13_4_MAC_CATALYST_ARM64:
-    name: "Xcode version 15.0, Target macOS Catalyst on Apple Silicon [arm64] Target SDK 13.1"
+  build_with_14_2_MAC_CATALYST:
+    name: "Xcode version 14.2, Target macOS Catalyst on Intel CPUs [x86_64] Target SDK 16.2"
     runs-on: macos-13
     env:
-      PLATFORM: MAC_CATALYST_ARM64
-      DEPLOYMENT_TARGET: "13.1"
+      PLATFORM: MAC_CATALYST
+      DEPLOYMENT_TARGET: 16.2
     steps:
     - uses: actions/checkout@v2
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '15.0'
+        xcode-version: '14.2'
+    - name: Build
+      run: ./.github/build.sh
+  build_with_15_4_MAC_CATALYST_ARM64:
+    name: "Xcode version 15.4, Target macOS Catalyst on Apple Silicon [arm64] Target SDK 17.2"
+    runs-on: macos-14
+    env:
+      PLATFORM: MAC_CATALYST_ARM64
+      DEPLOYMENT_TARGET: 17.2
+    steps:
+    - uses: actions/checkout@v2
+    - uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: '15.4'
     - name: Build
       run: ./.github/build.sh
