--- a/.github/workflows/combined.yml
+++ b/.github/workflows/combined.yml
@@ -7,63 +7,63 @@ on:
     types: [ opened, synchronize ]
 
 jobs:  
-  build_with_15_0_OS64COMBINED:
-    name: "Xcode version 15.0, Target iOS Combined [x86_64, arm64] Target SDK 15.0"
-    runs-on: macos-13
+  build_with_latest_OS64COMBINED:
+    name: "Latest Xcode, Target iOS Combined [x86_64, arm64] Target SDK 14.0"
+    runs-on: macos-latest
     env:
       PLATFORM: OS64COMBINED
       USE_NEW_BUILD: 1
-      DEPLOYMENT_TARGET: "15.0"
+      DEPLOYMENT_TARGET: 14.0
       USE_XCODE: 1
     steps:
     - uses: actions/checkout@v2
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '15.0'
+        xcode-version: 'latest-stable'
     - name: Build
       run: ./.github/build.sh
-  build_with_15_0_WATCHOSCOMBINED:
-    name: "Xcode version 15.0, Target watchOS Combined [armv7k, arm64_32, x86_64] Target SDK 7.0"
+  build_with_15_0_1_WATCHOSCOMBINED:
+    name: "Xcode version 15.0.1, Target watchOS Combined [armv7k, arm64_32, x86_64] Target SDK 8.0"
     runs-on: macos-13
     env:
       PLATFORM: WATCHOSCOMBINED
       USE_NEW_BUILD: 1
-      DEPLOYMENT_TARGET: "7.0"
+      DEPLOYMENT_TARGET: 8.0
       USE_XCODE: 1
     steps:
     - uses: actions/checkout@v2
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '15.0'
+        xcode-version: '15.0.1'
     - name: Build
       run: ./.github/build.sh
-  build_with_15_0_TVOSCOMBINED:
-    name: "Xcode version 15.0, Target tvOS Combined [arm64, x86_64] Target SDK 14.0"
+  build_with_15_0_1_TVOSCOMBINED:
+    name: "Xcode version 15.0.1, Target tvOS Combined [arm64, x86_64] Target SDK 16.0"
     runs-on: macos-13
     env:
       PLATFORM: TVOSCOMBINED
       USE_NEW_BUILD: 1
-      DEPLOYMENT_TARGET: "14.0"
+      DEPLOYMENT_TARGET: 16.0
       USE_XCODE: 1
     steps:
     - uses: actions/checkout@v2
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '15.0'
+        xcode-version: '15.0.1'
     - name: Build
       run: ./.github/build.sh
-  build_with_15_0_OS64_LIBCURL:
-    name: "Xcode version 15.0, Target iOS [arm64, x86_64] Target SDK 17.0 [libCURL example]"
+  build_with_15_0_1_OS64_LIBCURL:
+    name: "Xcode version 15.0.1, Target iOS [arm64, x86_64] Target SDK 17.0 [libCURL example]"
     runs-on: macos-13
     env:
       PLATFORM: OS64COMBINED
-      DEPLOYMENT_TARGET: "17.0"
+      DEPLOYMENT_TARGET: 17.0
       USE_XCODE: 1
       BUILD_CURL: 1
     steps:
     - uses: actions/checkout@v2
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '15.0'
+        xcode-version: '15.0.1'
     - name: Build
       run: ./.github/build.sh
