--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -7,69 +7,56 @@ on:
     types: [ opened, synchronize ]
 
 jobs:
-  build_with_15_0_OS:
-    name: "Xcode version 11.7.0, Target iOS [arm64] Target SDK 14.0"
+  build_with_15_2_OS:
+    name: "Xcode version 15.2, Target iOS [arm64] Target SDK 17.2"
     runs-on: macos-13
     env:
       PLATFORM: OS64
-      DEPLOYMENT_TARGET: 14.0
+      DEPLOYMENT_TARGET: 17.2
     steps:
     - uses: actions/checkout@v2
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '15.0'
+        xcode-version: '15.2'
     - name: Build
       run: ./.github/build.sh
-  build_with_15_0_SIMULATOR64:
-    name: "Xcode version 15.0, Target iOS Simulator [x86_64] Target SDK 14.0"
+  build_with_15_2_SIMULATOR64:
+    name: "Xcode version 15.2, Target iOS Simulator [x86_64] Target SDK 17.2"
     runs-on: macos-13
     env:
       PLATFORM: SIMULATOR64
-      DEPLOYMENT_TARGET: 14.0
+      DEPLOYMENT_TARGET: 17.2
     steps:
     - uses: actions/checkout@v2
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '14.3.1'
+        xcode-version: '15.2'
     - name: Build
       run: ./.github/build.sh    
-  build_with_15_0_SIMULATORARM64:
-    name: "Xcode version 15.0, Target iOS Simulator [arm64] Target SDK 16.0"
+  build_with_15_2_SIMULATORARM64:
+    name: "Xcode version 15.2, Target iOS Simulator [arm64] Target SDK 17.2"
     runs-on: macos-13
     env:
       PLATFORM: SIMULATORARM64
-      DEPLOYMENT_TARGET: 16.0
+      DEPLOYMENT_TARGET: 17.2
     steps:
     - uses: actions/checkout@v2
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '15.0'
+        xcode-version: '15.2'
     - name: Build
       run: ./.github/build.sh    
-  build_with_11_7_0_OS64:
-    name: "Xcode version 11.7.0, Target iOS [arm64] Target SDK 11.0"
-    runs-on: macos-11
+  build_with_14_1_OS64:
+    name: "Xcode version 14.1, Target iOS [arm64] Target SDK 16.1"
+    runs-on: macos-13
     env:
       PLATFORM: OS64
-      DEPLOYMENT_TARGET: "11.0"
+      DEPLOYMENT_TARGET: 16.1
     steps:
     - uses: actions/checkout@v2
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '11.7.0'
-    - name: Build
-      run: ./.github/build.sh
-  build_with_12_5_1_OS64:
-    name: "Xcode version 12.5.1, Target iOS [arm64] Target SDK 12.0"
-    runs-on: macos-11
-    env:
-      PLATFORM: OS64
-      DEPLOYMENT_TARGET: "12.0"
-    steps:
-    - uses: actions/checkout@v2
-    - uses: maxim-lobanov/setup-xcode@v1
-      with:
-        xcode-version: '12.5.1'
+        xcode-version: '14.1'
     - name: Build
       run: ./.github/build.sh
   build_with_latest_OS64:
