--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -7,25 +7,25 @@ on:
     types: [ opened, synchronize ]
 
 jobs:
-  build_with_15_0_MAC:
-    name: "Xcode version 15.0, Target macOS [x86_64] Target SDK 10.13"
+  build_with_15_0_1_MAC:
+    name: "Xcode version 15.0.1, Target macOS [x86_64] Target SDK 13.3"
     runs-on: macos-13
     env:
       PLATFORM: MAC
-      DEPLOYMENT_TARGET: "10.13"
+      DEPLOYMENT_TARGET: 13.3
     steps:
     - uses: actions/checkout@v2
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '15.0'
+        xcode-version: '15.0.1'
     - name: Build
       run: ./.github/build.sh
   build_with_latest_MAC:
-    name: "Xcode version [latest supported], Target macOS [arm64] Target SDK 11.0 [shared example]"
+    name: "Xcode version [latest supported], Target macOS [arm64] Target SDK 15.0 [shared example]"
     runs-on: macos-latest
     env:
       PLATFORM: MAC_ARM64
-      DEPLOYMENT_TARGET: "11.0"
+      DEPLOYMENT_TARGET: 15.0
       BUILD_SHARED: 1
     steps:
     - uses: actions/checkout@v2
