--- a/.github/workflows/visionos.yml
+++ b/.github/workflows/visionos.yml
@@ -7,45 +7,31 @@ on:
     types: [ opened, synchronize ]
 
 jobs:
-  build_with_15_OS:
-    name: "Xcode version 15.0.0, Target visionOS [arm64] Target SDK 1.0"
-    runs-on: macos-13
+  build_with_15_4_OS:
+    name: "Xcode version 15.4, Target visionOS [arm64] Target SDK 1.2"
+    runs-on: macos-14
     env:
       PLATFORM: VISIONOS
-      DEPLOYMENT_TARGET: 1.0
+      DEPLOYMENT_TARGET: 1.2
     steps:
     - uses: actions/checkout@v2
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '15.0'
+        xcode-version: '15.4'
     - name: Build
       continue-on-error: true
       run: ./.github/build.sh
-  build_with_15_SIMULATOR64:
-    name: "Xcode version 15.0.0, Target visionOS Simulator [x86_64] Target SDK 1.0"
-    runs-on: macos-13
-    env:
-      PLATFORM: SIMULATOR64_VISIONOS
-      DEPLOYMENT_TARGET: 1.0
-    steps:
-    - uses: actions/checkout@v2
-    - uses: maxim-lobanov/setup-xcode@v1
-      with:
-        xcode-version: '15.0'
-    - name: Build
-      continue-on-error: true 
-      run: ./.github/build.sh    
-  build_with_15_SIMULATOR_VISIONOS:
-    name: "Xcode version 15.0.0, Target visionOS Simulator [arm64] Target SDK 1.0"
-    runs-on: macos-13
+  build_with_latest_SIMULATOR_VISIONOS:
+    name: "Latest Xcode, Target visionOS Simulator [arm64] Target SDK 1.2"
+    runs-on: macos-latest
     env:
       PLATFORM: SIMULATOR_VISIONOS
-      DEPLOYMENT_TARGET: 1.0
+      DEPLOYMENT_TARGET: 1.2
     steps:
     - uses: actions/checkout@v2
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '15.0'
+        xcode-version: 'latest-stable'
     - name: Build
       continue-on-error: true
       run: ./.github/build.sh    
