--- a/.github/workflows/watchos.yml
+++ b/.github/workflows/watchos.yml
@@ -7,29 +7,29 @@ on:
     types: [ opened, synchronize ]
 
 jobs:
-  build_with_15_0_WATCHOS:
-    name: "Xcode version 15.0, Target tvOS [armv7k, arm64_32] Target SDK 7.0"
-    runs-on: macos-13
+  build_with_15_4_WATCHOS:
+    name: "Xcode version 15.4, Target tvOS [armv7k, arm64_32] Target SDK 10.5"
+    runs-on: macos-14
     env:
       PLATFORM: WATCHOS
-      DEPLOYMENT_TARGET: "7.0"
+      DEPLOYMENT_TARGET: 10.5
     steps:
     - uses: actions/checkout@v2
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '15.0'
+        xcode-version: '15.4'
     - name: Build
       run: ./.github/build.sh
-  build_with_12_5_1_SIMULATOR_WATCHOS:
-    name: "Xcode version 12_5_1, Target tvOS [x86_64] Target SDK 7.0"
-    runs-on: macos-11
+  build_with_15_0_1_SIMULATOR_WATCHOS:
+    name: "Xcode version 15.0.1, Target tvOS [x86_64] Target SDK 10.0"
+    runs-on: macos-13
     env:
       PLATFORM: SIMULATOR_WATCHOS
-      DEPLOYMENT_TARGET: "7.0"
+      DEPLOYMENT_TARGET: 10.0
     steps:
     - uses: actions/checkout@v2
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '12.5.1'
+        xcode-version: '15.0.1'
     - name: Build
       run: ./.github/build.sh
