--- a/.github/workflows/catalyst.yml
+++ b/.github/workflows/catalyst.yml
@@ -33,3 +33,16 @@ jobs:
         xcode-version: '15.4'
     - name: Build
       run: ./.github/build.sh
+  build_with_15_4_MAC_CATALYST_UNIVERSAL:
+    name: "Xcode version 15.4, Target macOS Catalyst on Intel CPUs [x86_64] and Apple Silicon [arm64] Target SDK 17.2"
+    runs-on: macos-14
+    env:
+      PLATFORM: MAC_CATALYST_UNIVERSAL
+      DEPLOYMENT_TARGET: 17.2
+    steps:
+    - uses: actions/checkout@v2
+    - uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: '15.4'
+    - name: Build
+      run: ./.github/build.sh
