--- a/.github/workflows/combined.yml
+++ b/.github/workflows/combined.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     types: [ opened, synchronize ]
 
-jobs:  
+jobs:
   build_with_latest_OS64COMBINED:
     name: "Latest Xcode, Target iOS Combined [x86_64, arm64] Target SDK 14.0"
     runs-on: macos-latest
@@ -29,6 +29,21 @@ jobs:
       PLATFORM: WATCHOSCOMBINED
       USE_NEW_BUILD: 1
       DEPLOYMENT_TARGET: 8.0
+      USE_XCODE: 1
+    steps:
+    - uses: actions/checkout@v2
+    - uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: '15.0.1'
+    - name: Build
+      run: ./.github/build.sh
+  build_with_15_0_1_SIMULATOR_WATCHOSCOMBINED:
+    name: "Xcode version 15.0.1, Target watchOS Simulator Combined [arm64, x86_64] Target SDK 10.0"
+    runs-on: macos-13
+    env:
+      PLATFORM: SIMULATOR_WATCHOSCOMBINED
+      USE_NEW_BUILD: 1
+      DEPLOYMENT_TARGET: 10.0
       USE_XCODE: 1
     steps:
     - uses: actions/checkout@v2
