--- a/.github/workflows/watchos.yml
+++ b/.github/workflows/watchos.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build_with_15_4_WATCHOS:
-    name: "Xcode version 15.4, Target tvOS [armv7k, arm64_32] Target SDK 10.5"
+    name: "Xcode version 15.4, Target watchOS [armv7k, arm64_32] Target SDK 10.5"
     runs-on: macos-14
     env:
       PLATFORM: WATCHOS
@@ -21,10 +21,23 @@ jobs:
     - name: Build
       run: ./.github/build.sh
   build_with_15_0_1_SIMULATOR_WATCHOS:
-    name: "Xcode version 15.0.1, Target tvOS [x86_64] Target SDK 10.0"
+    name: "Xcode version 15.0.1, Target watchOS Simulator [x86_64] Target SDK 10.0"
     runs-on: macos-13
     env:
       PLATFORM: SIMULATOR_WATCHOS
+      DEPLOYMENT_TARGET: 10.0
+    steps:
+    - uses: actions/checkout@v2
+    - uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: '15.0.1'
+    - name: Build
+      run: ./.github/build.sh
+  build_with_15_0_1_SIMULATORARM64_WATCHOS:
+    name: "Xcode version 15.0.1, Target watchOS Simulator [arm64] Target SDK 10.0"
+    runs-on: macos-13
+    env:
+      PLATFORM: SIMULATORARM64_WATCHOS
       DEPLOYMENT_TARGET: 10.0
     steps:
     - uses: actions/checkout@v2
